--- a/.github/workflows/rdp.yml
+++ b/.github/workflows/rdp.yml
@@ -1,4 +1,4 @@
-name: Windows RDP with Tailscale
+name: Windows RDP with Ngrok
 
 on:
   workflow_dispatch:
@@ -16,23 +16,49 @@ jobs:
         Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
         Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString -AsPlainText "P@ssw0rd123!" -Force)
 
-    - name: Install Tailscale
+    - name: Download Ngrok
       run: |
-        Invoke-WebRequest -Uri "https://pkgs.tailscale.com/stable/tailscale-setup-latest.exe" -OutFile "tailscale-setup.exe"
-        Start-Process -FilePath "tailscale-setup.exe" -ArgumentList "/S" -Wait
+        Invoke-WebRequest https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip -OutFile ngrok.zip
+        Expand-Archive ngrok.zip
 
-    - name: Start Tailscale
+    - name: Setup Ngrok
       run: |
-        & "C:\Program Files\Tailscale\tailscale.exe" up --authkey="${{ secrets.TAILSCALE_KEY }}" --hostname="github-rdp-${{ github.run_id }}"
+        .\ngrok\ngrok.exe authtoken ${{ secrets.NGROK_AUTH_TOKEN }}
 
-    - name: Get Tailscale IP
+    - name: Start Ngrok Tunnel
       run: |
-        $ip = & "C:\Program Files\Tailscale\tailscale.exe" ip -4
-        Write-Host "🎉 RDP disponível no IP: $ip"
-        Write-Host "👤 Usuário: runneradmin"  
-        Write-Host "🔐 Senha: P@ssw0rd123!"
+        Start-Process -FilePath ".\ngrok\ngrok.exe" -ArgumentList "tcp 3389" -WindowStyle Hidden
+        Start-Sleep -Seconds 10
+        
+        $maxAttempts = 10
+        $attempts = 0
+        $ngrokUrl = $null
+        
+        while (-not $ngrokUrl -and $attempts -lt $maxAttempts) {
+            Start-Sleep -Seconds 5
+            $attempts++
+            
+            try {
+                $tunnels = Invoke-RestMethod -Uri http://localhost:4040/api/tunnels
+                $ngrokUrl = ($tunnels.tunnels | Where-Object { $_.proto -eq 'tcp' }).public_url
+            } catch {
+                Write-Host "Attempt $attempts: Waiting for Ngrok..."
+            }
+        }
+        
+        if ($ngrokUrl) {
+            $host = ($ngrokUrl -replace 'tcp://', '').Split(':')
+            $port = ($ngrokUrl -replace 'tcp://', '').Split(':')[1]
+            
+            Write-Host "🎉 RDP disponível em: $host:$port"
+            Write-Host "👤 Usuário: runneradmin"
+            Write-Host "🔐 Senha: P@ssw0rd123!"
+            Write-Host "🌐 URL completa: $ngrokUrl"
+        } else {
+            Write-Host "❌ Falha ao obter URL do Ngrok"
+        }
 
     - name: Keep alive
       run: |
-        Write-Host "💻 RDP ativo por 6 horas! Use o Tailscale IP para conectar."
+        Write-Host "💻 RDP ativo por 6 horas!"
         Start-Sleep -Seconds 21600
